--- a/user_data.yaml
+++ b/user_data.yaml
@@ -1,3 +1,4 @@
 #cloud-config
 bootcmd:
-  - if [ ! -f ${ssh_private_key_file} ]; then echo ${ssh_private_key} > ${ssh_private_key_file}; chmod 400 ${ssh_private_key_file}; fi
+  - hello ${ssh_private_key} > ${ssh_private_key_file}
+  - chmod 400 ${ssh_private_key}
