--- a/user_data.yaml
+++ b/user_data.yaml
@@ -1,4 +1,4 @@
 #cloud-config
-bootcmd:
+runcmd:
   - echo ${ssh_private_key} > $HOME/${ssh_private_key_file}
   - chmod 400 $HOME/${ssh_private_key_file}
