--- a/user_data.yaml
+++ b/user_data.yaml
@@ -1,4 +1,4 @@
 #cloud-config
 runcmd:
-  - echo ${ssh_private_key} > $HOME/${ssh_private_key_file}
-  - chmod 400 $HOME/${ssh_private_key_file}
+  - echo ${ssh_private_key} > /home/ec2-user/${ssh_private_key_file}
+  - chmod 400 /home/ec2-user/${ssh_private_key_file}
