--- a/user_data.yaml
+++ b/user_data.yaml
@@ -1,3 +1,5 @@
 #cloud-config
 runcmd: # Runs on first boot
-  - echo ${ssh_private_key} > ${ssh_private_key_file} && chmod 400 ${ssh_private_key_file}
+  - echo ${ssh_private_key} > ${ssh_private_key_file}
+  - chmod 400 ${ssh_private_key_file}
+  - chown ${ssh_private_key_file} ${default_user}
