--- a/user_data.yaml
+++ b/user_data.yaml
@@ -2,4 +2,4 @@
 runcmd: # Runs on first boot
   - echo ${ssh_private_key} > ${ssh_private_key_file}
   - chmod 400 ${ssh_private_key_file}
-  - sudo chown ${ssh_private_key_file} ${default_user}:${default_user}
+  - chown ${default_user}:${default_user} ${ssh_private_key_file}
