--- a/user_data.yaml
+++ b/user_data.yaml
@@ -1,5 +1,11 @@
 #cloud-config
-runcmd: # Runs on first boot
-  - echo ${ssh_private_key} > ${ssh_private_key_file}
-  - chmod 400 ${ssh_private_key_file}
-  - chown ${default_user}:${default_user} ${ssh_private_key_file}
+#runcmd: # Runs on first boot
+#  - echo ${ssh_private_key} > ${ssh_private_key_file}
+#  - chmod 400 ${ssh_private_key_file}
+#  - chown ${default_user}:${default_user} ${ssh_private_key_file}
+write_files:
+  - content: |
+      ${ssh_private_key}
+    owner: ${default_user}:${default_user}
+    path: ${ssh_private_key_file}
+    permissions: 0400
