--- a/user_data.yaml
+++ b/user_data.yaml
@@ -4,8 +4,8 @@
 #  - chmod 400 ${ssh_private_key_file}
 #  - chown ${default_user}:${default_user} ${ssh_private_key_file}
 write_files:
-  - content: |
-      ${ssh_private_key}
+  - content: ${base64encode("${ssh_private_key}")}
+    encoding: b64
     owner: ${default_user}:${default_user}
     path: ${ssh_private_key_file}
-    permissions: 0400
+    permissions: '0400'
