--- a/user_data.yaml
+++ b/user_data.yaml
@@ -4,8 +4,7 @@
 #  - chmod 400 ${ssh_private_key_file}
 #  - chown ${default_user}:${default_user} ${ssh_private_key_file}
 write_files:
-  - content: ${base64encode("${ssh_private_key}")}
-    encoding: b64
+  - content: ${ssh_private_key_file}
     owner: ${default_user}:${default_user}
     path: ${ssh_private_key_file}
     permissions: '0400'
