remove extra dollar sign

--- a/user_data.yaml
+++ b/user_data.yaml
@@ -1,6 +1,6 @@
 #cloud-config
 write_files:
-  - content: ${base64encode(${ssh_private_key})}
+  - content: ${base64encode(ssh_private_key)}
     owner: ${default_user}:${default_user}
     path: ${ssh_private_key_file}
     permissions: '0400'
