--- a/user_data.yaml
+++ b/user_data.yaml
@@ -1,6 +1,7 @@
 #cloud-config
 write_files:
   - content: ${jsonencode(ssh_private_key)}
-    owner: 1000:1000
     path: ${ssh_private_key_file}
-    permissions: '0400'
+    permissions: "0400"
+    owner: "${default_user}:${default_user}"
+    encoding: "b64"
