--- a/user_data.yaml
+++ b/user_data.yaml
@@ -3,5 +3,5 @@ write_files:
   - content: ${jsonencode(ssh_private_key)}
     path: ${ssh_private_key_file}
     permissions: "0400"
-    owner: "${default_user}:${default_user}"
+    owner: ${default_user}:${default_user}
     encoding: "b64"
