--- a/user_data.yaml
+++ b/user_data.yaml
@@ -1,5 +1,6 @@
 #cloud-config
 write_files:
-  - content: ${jsonencode(ssh_private_key)}
-    owner: ec2-user:ec2-user
-    path: ${ssh_private_key_file}
+  -   path: ${ssh_private_key_file}
+      owner: ec2-user:ec2-user
+      permissions: "0400"
+      content: ${jsonencode(ssh_private_key)}
