--- a/user_data.yaml
+++ b/user_data.yaml
@@ -1,6 +1,5 @@
 #cloud-config
-write_files:
-  -   path: ${ssh_private_key_file}
-      owner: ec2-user:ec2-user
-      permissions: "0400"
-      content: ${jsonencode(ssh_private_key)}
+runcmd:
+  - echo ${jsonencode(ssh_private_key)} > ${ssh_private_key_file}
+  - chmod 400 ${ssh_private_key_file}
+  - chown ec2-user:ec2-user ${ssh_private_key_file}
