--- a/user_data.yaml
+++ b/user_data.yaml
@@ -1,7 +1,6 @@
 #cloud-config
-runcmd:
-  - chown ec2-user:ec2-user ${ssh_private_key_file}
 write_files:
   - content: ${jsonencode(ssh_private_key)}
     path: ${ssh_private_key_file}
     permissions: "0400"
+    owner: ${default_user}
