--- a/user_data.yaml
+++ b/user_data.yaml
@@ -1,6 +1,6 @@
 #cloud-config
 write_files:
-  - content: ${jsonencode(ssh_private_key)}
-    path: ${ssh_private_key_file}
-    permissions: "0400"
-    owner: ${default_user}:${default_user}
+  -  path: ${ssh_private_key_file}
+     owner: ${default_user}:${default_user}
+     permissions: "0400"
+     content: ${jsonencode(ssh_private_key)}
